# signfinder-core

./: .gitignore  LICENSE  README.md  TECH_DEBT.md  debug_fitz.py  pyproject.toml
signfinder/: __init__.py  config.py
signfinder/anchors/: __init__.py  builder.py  finder.py  models.py
signfinder/fingerprint/: __init__.py  computer.py
signfinder/llm/: __init__.py  anthropic_client.py  base.py  config.py  deepseek_client.py  factory.py  gemini_client.py  openai_client.py
signfinder/pdf/: __init__.py  language.py  overlay.py  parser.py  preview.py
signfinder/pipeline/: __init__.py  auto1.py  llm_finder.py  party_resolver.py  pattern_extractor.py  settings.py  validator.py
signfinder/prompts/: __init__.py  extraction.py  party_resolver.py  regex_generation.py  settings.py  validation.py
signfinder/signature/: __init__.py  processor.py
signfinder/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
signfinder/templates/: __init__.py  matcher.py  models.py  storage.py
signfinder/traffic_light/: __init__.py  classifier.py
signfinder/utils/: __init__.py  logging.py
tests/: test_anchors.py  test_fingerprint.py  test_storage.py
