[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signfinder-core"
version = "1.13.3"
description = "Core engine for SignFinder — automatic signature placement in contracts"
authors = [{name = "alexgeorg2507", email = "alexgeorg2507@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pymupdf>=1.23",
    "anthropic>=0.40",
    "openai>=1.35",
    "google-generativeai>=0.7",
    "simhash>=2.1",
    "python-docx>=1.0",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "pydantic>=2.5",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.10"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["signfinder*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
